2006-01-30  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* stooop.test: Fixed handling of "env", also did the simplified boilerplate.

2006-01-29  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* stooop.test: Fixed use and cleanup of temp. files

2006-01-19  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* stooop.test: Hooked into the new common test support code.

2006-01-10  Andreas Kupries <andreask@activestate.com>

	* switched.tcl: Fixed bug, missing dependency on package
	  stooop. This bug was introduced by the change to the package
	  loading of switched.

2005-12-09  Andreas Kupries <andreask@activestate.com>

	* pkgIndex.tcl: Replaced lazy loading setup of package 'switched'
	  with standard regular source setup.

2005-10-06  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	*
	* Released and tagged Tcllib 1.8 ========================
	* 

2004-10-05  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	*
	* Released and tagged Tcllib 1.7 ========================
	* 

2004-05-23  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	*
	* Released and tagged Tcllib 1.6.1 ========================
	* 

2004-02-15  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	*
	* Released and tagged Tcllib 1.6 ========================
	* 

2003-05-05  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	*
	* Released and tagged Tcllib 1.4 ========================
	* 

2003-04-11  Andreas Kupries  <andreask@activestate.com>

	* stooop.tcl:
	* stooop.man:
	* pkgIndex.tcl: Set version of the package to to 4.4.1 throughout.

2003-04-01  Andreas Kupries  <andreask@activestate.com>

	* stooop.man:
	* stooop.htm: Renamed to 'stoop_man.html'. Updated doctools
	  documentation to refer to manual under the new name. This
	  resolves the circular link reported in Tcllib SF bug #687923.

2003-01-16  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* stooop.man: More semantic markup, less visual one.
